fix delete box button overflow

--- a/src/components/MarkerInfo/BoxInfo/BoxInfo.module.css
+++ b/src/components/MarkerInfo/BoxInfo/BoxInfo.module.css
@@ -90,7 +90,7 @@
 
 .desktop-delete-box-button {
   position: fixed !important;
-  right: 5px;
+  right: 10px;
   bottom: 5px;
 }
 
